--- a/webtech1/index.html
+++ b/webtech1/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Endless Lorem Ipsum</title>
-    <link rel="stylesheet" href="css/index.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" type="text/css">
     <script type="application/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="application/javascript" src="js/index.js"></script>
     <script type="text/javascript">
@@ -22,17 +22,19 @@
     </script>
 </head>
 <body onload="init()">
-<div id="header">
-    <div id="banner">
-        <div id="menuBar">
-            <span class="menuButton"><a href="lorem.html">Home</a></span>
-            <span class="menuButton"><a href="bookform.html">Add Books</a></span>
-            <span class="menuButton"><a href="authorform.html">Add Authors</a></span></td>
-            <span class="menuButton"><a href="bookauthors.html">Authors</a></span>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Library</a>
         </div>
-        Library
+        <ul class="nav navbar-nav">
+            <li class="active menuButton"><a href="lorem.html">Home</a></li>
+            <li class="menuButton"><a href="bookform.html">add Books</a></li>
+            <li class="menuButton"><a href="asd.html">asd</a></li>
+            <li class="menuButton"><a href="contact.html">contact</a></li>
+        </ul>
     </div>
-</div>
+</nav>
 <div id="content">
 
 </div>
