--- a/webtech1/bookform.html
+++ b/webtech1/bookform.html
@@ -1,16 +1,39 @@
 <html>
 <script src="js/bookform.js" type="application/javascript"></script>
+
+<div class="container">
+    <h2>Book form</h2>
+    <form>
+        <div class="form-group">
+            <label for="title">Title:<span class="glyphicon glyphicon-th"></span></label>
+            <input type="text" class="form-control" id="title" placeholder="Enter Title" name="title">
+        </div>
+        <div class="form-group">
+            <label for="genre">Genre:</label>
+            <select id="genre" class="form-control" name="genre" required="required">
+                <option value="Scifi">Scifi</option>
+                <option value="asd">sad</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="quantity">Quantity:</label>
+            <input type="number" class="form-control" id="quantity" name="quantity">
+        </div>
+
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
 <form action="addBook" method="post" class="form">
     <table class="table">
 
         <tr>
-            <td>Title:</td>
+            <td>Title:<span class="glyphicon glyphicon-book"></span>"</td>
             <td>
                 <input type="text" name="title" required="required" autofocus value="Ads"/>
             </td>
         </tr>
         <tr>
-            <td>Genre:</td>
+            <td>Genre:<span class="glyphicon glyphicon-list-alt"></span></td>
             <td><select name="genre" required="required">
                 <option
                         value="Scifi">Sci-Fi
@@ -42,5 +65,38 @@
         </tr>
     </table>
 
+    <div id="error" class="alert alert-danger" hidden>
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times</a>
+        <strong>Hiba!!!</strong> A szerver nem érhető el!
+    </div>
+
 </form>
+
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
