--- a/webtech1/contact.html
+++ b/webtech1/contact.html
@@ -1,29 +1,33 @@
 <html>
-	<h1>Address</h1>
-	<table>
+<div class="container">
+	<h1 class="text-danger">Address</h1>
+	<table class="table table-striped">
 		<tr>
-			<td>City</td>
-			<td>Miskolc</td>
+			<td class="text-warning">City</td>
+			<td class="text-warning">Miskolc</td>
 		</tr>
 		<tr>
-			<td>ZipCode</td>
-			<td>3515</td>
+			<td class="text-info">ZipCode</td>
+			<td class="text-info">3515</td>
 		</tr>
 		<tr>
-			<td>Street</td>
-			<td>Lorem Ipsum 12</td>
+			<td class="text-succes">Street</td>
+			<td class="text-succes">Lorem Ipsum 12</td>
 		</tr>
 	</table>
 	<p>
-	<h1>Made by:</h1>
-	<table>
+	<h1 class="bg-primary">Made by:</h1>
+	<table class="table table-bordered">
 		<tr>
-			<td>Name: </td>
+			<td class="text-primary">Name: </td>
 			<td>Satan Adam</td>
 		</tr>
 		<tr>
-			<td>Neptun code: </td>
+			<td class="text-muted">Neptun code: </td>
 			<td>CLJZFF</td>
 		</tr>
 	</table>
+</div>
+
+
 </html>
