--- a/webtech1/index.html
+++ b/webtech1/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Endless Lorem Ipsum</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/scss/bootstrap.css" type="text/css">
     <script type="application/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="application/javascript" src="js/index.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $.each($('.menuButton'), function (mbIndex, mbValue) {
