--- a/npmExample/index.html
+++ b/npmExample/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-asd
+<h1>Szünet 9:40ig</h1>
 </body>
 </html>
